@@ -31,7 +31,6 @@ Software Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA
 #include <string>
 
 #include "oct-time.h"
-#include "ov-list.h"
 #include "pager.h"
 
 class octave_value;
