@@ -1,3 +1,13 @@
+2006-12-06  John W. Eaton  <jwe@octave.org>
+
+2006-12-06  Michael Goffioul  <michael.goffioul@swing.be>
+
+	* mappers.cc (install_mapper_functions): Undefine isascii before
+	the DEFUN_MAPPER for it.
+
+	* input.cc (get_user_input): Prevent out of bounds array access
+	when checking for EOL.
+
 2006-12-05  John W. Eaton  <jwe@octave.org>
 
 	* ls-oct-ascii.cc (extract_keyword): If no match and looking for
